<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#010101"
    tools:context=".Calculator">
    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:gravity="end"
        android:maxLength="8"
        android:textColor="@color/white"
        android:textColorHighlight="#65FFAA00"
        android:textIsSelectable="true"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/multi_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onOperatorClick"
        android:text="@string/multiplication"
        android:textColor="#3d8e11"
        android:textSize="35sp"
        app:backgroundTint="#171717"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/no9_btn"
        app:layout_constraintEnd_toStartOf="@+id/divided_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minus_btn"
        app:layout_constraintTop_toBottomOf="@+id/result_tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/divided_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onOperatorClick"
        android:text="@string/divided"
        android:textColor="#3d8e11"
        android:textSize="35sp"
        app:backgroundTint="#171717"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/c_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/multi_btn"
        app:layout_constraintTop_toBottomOf="@+id/result_tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/minus_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onOperatorClick"
        android:text="@string/minus"
        android:textColor="#3d8e11"
        android:textSize="35sp"
        app:backgroundTint="#171717"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/no8_btn"
        app:layout_constraintEnd_toStartOf="@+id/multi_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plus_btn"
        app:layout_constraintTop_toBottomOf="@+id/result_tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/plus_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onOperatorClick"
        android:text="@string/plus"
        android:textColor="#3d8e11"
        android:textSize="35sp"
        app:backgroundTint="#171717"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/no7_btn"
        app:layout_constraintEnd_toStartOf="@+id/minus_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_tv" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/no3_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onDigitClick"
        android:text="@string/_3"
        android:textSize="30sp"
        app:backgroundTint="#171717"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/equal_btn"
        app:layout_constraintEnd_toStartOf="@+id/reminder_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no2_btn"
        app:layout_constraintTop_toBottomOf="@+id/no6_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reminder_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onOperatorClick"
        android:text="@string/reminder"
        android:textColor="#3d8e11"
        android:textSize="35sp"
        app:backgroundTint="#171717"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/sqrt_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no3_btn"
        app:layout_constraintTop_toBottomOf="@+id/backspace_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/no2_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onDigitClick"
        android:text="@string/_2"
        android:textSize="30sp"
        app:backgroundTint="#171717"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/dot_btn"
        app:layout_constraintEnd_toStartOf="@+id/no3_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no1_btn"
        app:layout_constraintTop_toBottomOf="@+id/no5_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/no1_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onDigitClick"
        android:text="@string/_1"
        android:textSize="30sp"
        app:backgroundTint="#171717"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/no0_btn"
        app:layout_constraintEnd_toStartOf="@+id/no2_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no4_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dot_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onDigitClick"
        android:text="@string/dot"
        android:textSize="35sp"
        app:backgroundTint="#171717"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equal_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no0_btn"
        app:layout_constraintTop_toBottomOf="@+id/no2_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/no0_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onDigitClick"
        android:text="@string/_0"
        android:textSize="30sp"
        app:backgroundTint="#171717"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dot_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no1_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sqrt_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onSqrtClick"
        android:text="@string/sqrt"
        android:textColor="#3d8e11"
        android:textSize="35sp"
        app:backgroundTint="#171717"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/equal_btn"
        app:layout_constraintTop_toBottomOf="@+id/reminder_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/equal_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onEqualClick"
        android:text="@string/equal"
        android:textSize="35sp"
        app:backgroundTint="#3d8e11"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sqrt_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dot_btn"
        app:layout_constraintTop_toBottomOf="@+id/no3_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/no6_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onDigitClick"
        android:text="@string/_6"
        android:textSize="30sp"
        app:backgroundTint="#171717"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/no3_btn"
        app:layout_constraintEnd_toStartOf="@+id/backspace_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no5_btn"
        app:layout_constraintTop_toBottomOf="@+id/no9_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/no5_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onDigitClick"
        android:text="@string/_5"
        android:textSize="30sp"
        app:backgroundTint="#171717"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/no2_btn"
        app:layout_constraintEnd_toStartOf="@+id/no6_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no4_btn"
        app:layout_constraintTop_toBottomOf="@+id/no8_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backspace_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onBackClick"
        android:text="@string/backspace"
        android:textColor="#3d8e11"
        android:textSize="35sp"
        app:backgroundTint="#171717"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/reminder_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no6_btn"
        app:layout_constraintTop_toBottomOf="@+id/c_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/no4_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onDigitClick"
        android:text="@string/_4"
        android:textSize="30sp"
        app:backgroundTint="#171717"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/no1_btn"
        app:layout_constraintEnd_toStartOf="@+id/no5_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no7_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/no9_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onDigitClick"
        android:text="@string/_9"
        android:textSize="30sp"
        app:backgroundTint="#171717"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/no6_btn"
        app:layout_constraintEnd_toStartOf="@+id/c_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no8_btn"
        app:layout_constraintTop_toBottomOf="@+id/multi_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/c_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onClearClick"
        android:text="@string/c"
        android:textColor="#3d8e11"
        android:textSize="35sp"
        app:backgroundTint="#171717"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/backspace_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no9_btn"
        app:layout_constraintTop_toBottomOf="@+id/divided_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/no7_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onDigitClick"
        android:text="@string/_7"
        android:textSize="30sp"
        app:backgroundTint="#171717"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/no4_btn"
        app:layout_constraintEnd_toStartOf="@+id/no8_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/no8_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:onClick="onDigitClick"
        android:text="@string/_8"
        android:textSize="30sp"
        app:backgroundTint="#171717"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/no5_btn"
        app:layout_constraintEnd_toStartOf="@+id/no9_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no7_btn"
        app:layout_constraintTop_toBottomOf="@+id/minus_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>